--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         $(document).ready(function () {
             var secret = 'hello'
             var socket =
-                io.connect(`http://localhost:9000/48A061273FCD8B758D7E94E15AFC6789139FDD33EECB1E4B0CBE7AAEA28F4295`, {
+                io.connect(`${window.location.href}/48A061273FCD8B758D7E94E15AFC6789139FDD33EECB1E4B0CBE7AAEA28F4295`, {
                     path: '/socket.io'
                 })
 
